--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,6 +77,7 @@ test_junitext = "1.1.5"
 test_barista = "4.3.0"
 test_orchestrator = "1.4.2"
 test_rules = "1.5.0"
+test_hamcrest = "2.2"
 
 # Quality
 ktlint = "0.50.0"
@@ -164,6 +165,7 @@ test_mockk = { module = "io.mockk:mockk", version.ref = "test_mockk" }
 test_barista = { module = "com.adevinta.android:barista", version.ref = "test_barista" }
 test_orchestrator = { module = "androidx.test:orchestrator", version.ref = "test_orchestrator" }
 test_rules = { module = "androidx.test:rules", version.ref = "test_rules" }
+test_hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "test_hamcrest" }
 
 # Quality
 ktlint = { module = "com.pinterest:ktlint", version.ref = "ktlint" }
