🔥 Delete all the redundant Nav Graph code from :app
Now that we have this on KMP modules, let's kill the old navigation
system with fire!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name="com.escodro.alkaa.presentation.MainActivity"
+            android:name="com.escodro.alkaa.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Alkaa"
             android:windowSoftInputMode="adjustResize">
