✨ Adapt Tracker to by dynamic on Android and static on iOS
Using some platform-specific dependencies and abstracting the core logic
of the Tracker feature, the following behavior was implemented:

- On Android, the feature still a Dynamic Feature that can be downloaded
by the users
- On iOS, the feature is static and will always be available for the
users

--- a/features/tracker/src/androidMain/AndroidManifest.xml
+++ b/features/tracker/src/androidMain/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application>
         <activity
-            android:name=".presentation.TrackerActivity"
+            android:name=".TrackerActivity"
             android:exported="true"
             android:theme="@style/Theme.Alkaa">
 
