--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,6 +64,7 @@ sqldelight = "2.0.0"
 moko = "0.16.1"
 moko_parcelize = "0.9.0"
 moko_resources = "0.23.0"
+moko_permissions = "0.16.0"
 
 # AtomicFU
 atomicfu = "0.22.0"
@@ -157,6 +158,7 @@ moko_resources_generator = { module = "dev.icerock.moko:resources-generator", ve
 moko_resources_core = { module = "dev.icerock.moko:resources", version.ref = "moko_resources" }
 moko_resources_compose = { module = "dev.icerock.moko:resources-compose", version.ref = "moko_resources" }
 moko_parcelize = { module = "dev.icerock.moko:parcelize", version.ref = "moko_parcelize" }
+moko_permissions_compose = { module = "dev.icerock.moko:permissions-compose", version.ref = "moko_permissions" }
 
 # Voyager
 voyager_navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
