--- a/ios-app/alkaa/Info.plist
+++ b/ios-app/alkaa/Info.plist
@@ -2,10 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en-US</string>
 		<string>pt-BR</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Permission used by third-party libraries</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Permission used by third-party libraries</string>
 </dict>
 </plist>
