--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,7 +42,7 @@ compose_bom = "2023.10.01"
 compose_activity = "1.8.0"
 compose_material3 = "1.0.1"
 compose_icons = "1.4.2"
-jb_compose_compiler = "1.5.11"
+jb_compose_compiler = "1.6.0-beta01"
 compose_windowsizeclass = "0.3.1"
 
 # Koin
