--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,26 +18,26 @@ logback = "1.2.11"
 logcat = "0.1"
 
 # KotlinX
-kotlinx_coroutines = "1.7.3"
+kotlinx_coroutines = "1.8.0"
 kotlinx_serialization = "1.6.0"
 kotlinx_collections_immutable = "0.3.6"
 kotlinx_datetime = "0.5.0"
 
 # AndroidX
-activity = "1.8.2"
-core = "1.12.0"
+activity = "1.9.0"
+core = "1.13.0"
 appcompat = "1.6.1"
-corektx = "1.12.0"
+corektx = "1.13.0"
 playcore = "1.10.3"
-datastore = "1.1.0-beta01"
+datastore = "1.1.0"
 glance = "1.0.0"
 workmanager = "2.9.0"
 lifecycle_viewmodel = "2.7.0"
 
 # Compose
 compose_compiler = "1.5.5"
-compose_bom = "2024.01.00"
-compose_activity = "1.8.2"
+compose_bom = "2024.04.01"
+compose_activity = "1.9.0"
 jb_compose_compiler = "1.6.2"
 compose_windowsizeclass = "0.3.2"
 
@@ -67,7 +67,7 @@ test_junit = "4.13.2"
 test_runner = "1.5.2"
 test_core = "1.5.0"
 test_mockk = "1.13.8"
-test_uiautomator = "2.2.0"
+test_uiautomator = "2.3.0"
 test_junitext = "1.1.5"
 test_barista = "4.3.0"
 test_orchestrator = "1.4.2"
