--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.jvm.target.validation.mode=IGNORE
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+
+kotlin.native.binary.objcExportSuspendFunctionLaunchThreadRestriction=none
