👷 Add API descriptions
Added more API descriptions used by third-party libraries.

--- a/ios-app/alkaa/Info.plist
+++ b/ios-app/alkaa/Info.plist
@@ -15,5 +15,9 @@
 	<string>Permission used by third-party libraries</string>
 	<key>SPrivacyAccessedAPICategoryFileTimestamp</key>
 	<string>Timestamp used to set the creation and updated date in the tasks</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Permission used by third-party libraries</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Permission used by third-party libraries</string>
 </dict>
 </plist>
