👷 Use M1 VMs to build the project.
Hopefully it goes vroom.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ env:
 
 jobs:
   create-tag:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
+    timeout-minutes: 60
 
     steps:
       - name: Create tag
