--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,8 @@ concurrency:
 
 jobs:
   build-android:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
+    timeout-minutes: 30
 
     steps:
       - name: Checkout
@@ -35,7 +36,8 @@ jobs:
           ALKAA_STORE_PATH: ${{ vars.ALKAA_STORE_PATH }}
 
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-14
+    timeout-minutes: 30
 
     steps:
       - name: Checkout
