🎭 Update GitHub Actions to run the Instrumented tests
Changes made in the build.yml and instrumented_tests.yml to run the
instrumented tests for both iOS and Android. The build.yml was updated
to remove the unit tests from the build step, otherwise, it will try to
run the UI tests during that step. Not the perfect solution, but good
enough for now.

The Android Emulator Runner was also updated and it's running much
faster with the new recommended setup.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Gradle
-        run: ./gradlew clean build test --no-daemon --parallel build
+        run: ./gradlew clean build test -x shared:testDebugUnitTest -x shared:testReleaseUnitTest --parallel
         env:
           ALKAA_KEY_ALIAS: ${{ secrets.ALKAA_KEY_ALIAS }}
           ALKAA_KEY_PASSWORD: ${{ secrets.ALKAA_KEY_PASSWORD }}
