--- a/.github/workflows/instrumented_tests.yml
+++ b/.github/workflows/instrumented_tests.yml
@@ -1,4 +1,4 @@
-name: Run instrumented tests
+name: UI Tests
 
 on:
   push:
@@ -13,12 +13,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  android-test-aer:
-    name: "Android Emulator Runner"
-    runs-on: macos-latest
+  android-test:
+    name: "Android"
+    runs-on: ubuntu-latest
     timeout-minutes: 80
 
     strategy:
+      matrix:
+        api-level: [ 30 ]
+        arch: [ x86_64 ]
       fail-fast: false
 
     steps:
@@ -31,21 +34,24 @@ jobs:
           java-version: '17'
           distribution: 'zulu'
 
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
       - name: Run instrumented tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 27
-          profile: Galaxy Nexus
+          api-level: ${{ matrix.api-level }}
+          arch: x86_64
           disable-animations: true
-          disk-size: 2000M
+          disk-size: 6000M
           heap-size: 600M
-          script: |
-            adb logcat -c
-            adb logcat > logcat.txt &
-            ./gradlew connectedAndroidTest --stacktrace
+          script: ./gradlew :shared:connectedAndroidTest
 
       - name: Save Test Results
         uses: actions/upload-artifact@v4
@@ -57,8 +63,8 @@ jobs:
             ./logcat.txt
           retention-days: 7
 
-  android-test-gmd:
-    name: "Gradle Managed Devices"
+  ios-test:
+    name: "iOS"
     runs-on: macos-latest
     timeout-minutes: 80
 
@@ -75,13 +81,8 @@ jobs:
           java-version: '17'
           distribution: 'zulu'
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
       - name: Run instrumented tests
-        run: ./gradlew cleanManagedDevices --unused-only &&
-          ./gradlew alkaaDevicesGroupDebugAndroidTest -Dorg.gradle.workers.max=1
-          -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.experimental.testOptions.managedDevices.emulator.showKernelLogging=true
+        run: ./gradlew :shared:iosSimulatorArm64Test
 
       - name: Save Test Results
         uses: actions/upload-artifact@v4
