--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ kotlin.jvm.target.validation.mode=IGNORE
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 # Ignore AtomicFU warnings - will be fixed in Kotlin 2.0
 # (https://github.com/Kotlin/kotlinx-atomicfu/issues/376
