--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,7 +52,7 @@ sqldelight = "2.0.0"
 # Moko
 moko = "0.16.1"
 moko_parcelize = "0.9.0"
-moko_resources = "0.23.0"
+moko_resources = "0.24.0-beta-4"
 moko_permissions = "0.18.0"
 
 # AtomicFU
