🖥️ Upgrade GitHub Actions to M1
Builds are slow in iOS lately. Let's see if M1 is worth it.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           ALKAA_STORE_PATH: ${{ vars.ALKAA_STORE_PATH }}
 
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - name: Checkout
