--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@
 version_code = "30006"
 version_name = "3.0.6"
 android_gradle_plugin = "8.4.1"
-kotlin = "2.0.0-RC3"
+kotlin = "2.0.0"
 android_sdk_compile = "34"
 android_sdk_target = "33"
 android_sdk_min = "24"
