--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,4 @@ ktlint_standard_property-naming = disabled
 ktlint_standard_no-empty-first-line-in-class-body = disabled
 ktlint_standard_function-signature = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_class-signature = disabled
