--- a/ios-app/alkaa/Info.plist
+++ b/ios-app/alkaa/Info.plist
@@ -17,5 +17,7 @@
 	<string>Permission used by third-party libraries</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Permission used by third-party libraries</string>
+
+	<key>CADisableMinimumFrameDurationOnPhone</key><true/>
 </dict>
 </plist>
