--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -125,6 +125,7 @@ sqldelight_coroutines = { module = "app.cash.sqldelight:coroutines-extensions", 
 moko_mvvm_core = { module = "dev.icerock.moko:mvvm-core", version.ref = "moko" }
 moko_mvvm_compose = { module = "dev.icerock.moko:mvvm-flow-compose", version.ref = "moko" }
 moko_permissions_compose = { module = "dev.icerock.moko:permissions-compose", version.ref = "moko_permissions" }
+moko_permissions_notifications = { module = "dev.icerock.moko:permissions-notifications", version.ref = "moko_permissions" }
 
 # Test
 test_junit = { module = "junit:junit", version.ref = "test_junit" }
