🎨 Refactor task layout and integrate adaptive navigation
Updated task detail and list views for improved UI scrolling and
navigation. Integrated Compose Adaptive Navigation library to implement
a three-pane scaffold for better task management flow. Simplified task
filtering and category handling for easier maintenance.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,6 +40,7 @@ compose_bom = "2025.03.00"
 compose_activity = "1.10.1"
 compose_compiler = "1.8.0-alpha03"
 compose_navigation = "2.8.0-alpha13"
+compose_adaptive = "1.1.0-alpha04"
 
 # Koin
 koin_core = "4.0.2"
@@ -103,6 +104,8 @@ compose_bom = { group = "androidx.compose", name = "compose-bom", version.ref = 
 compose_ui = { module = "androidx.compose.ui:ui" }
 compose_icons = { module = "androidx.compose.material:material-icons-extended" }
 compose_material3 = { module = "androidx.compose.material3:material3" }
+compose_adaptive_navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "compose_adaptive" }
+
 compose_navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose_navigation" }
 
 # Dynamic Feature don't recognize BOM
