--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,7 +37,7 @@ annotation = "1.9.1"
 # Compose
 compose_bom = "2025.03.01"
 compose_activity = "1.10.1"
-compose_compiler = "1.8.0-alpha04"
+compose_compiler = "1.8.0-beta01"
 compose_navigation = "2.8.0-alpha13"
 compose_adaptive = "1.1.0-beta01"
 
