--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ kotlin.jvm.target.validation.mode=IGNORE
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
-kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
+kotlin.native.ignoreDisabledTargets=true
