--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,10 +42,7 @@ compose_navigation = "2.8.0-alpha13"
 compose_adaptive = "1.1.0-beta01"
 
 # Koin
-koin_core = "4.0.3"
-koin_test = "4.0.3"
-koin_android = "4.0.3"
-koin_compose_jb = "4.0.3"
+koin = "4.0.3"
 
 # SQLDelight
 sqldelight = "2.0.2"
@@ -113,10 +110,10 @@ compose_navigation = { module = "org.jetbrains.androidx.navigation:navigation-co
 compose_activity = { module = "androidx.activity:activity-compose", version.ref = "compose_activity" }
 
 #Koin
-koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin_core" }
-koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin_android" }
-koin_test = { module = "io.insert-koin:koin-test", version.ref = "koin_test" }
-koin_compose_jb = { module = "io.insert-koin:koin-compose", version.ref = "koin_compose_jb" }
+koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin_test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
+koin_compose = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 
 # SQLDelight
 sqldelight_driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
