--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ glance = "1.1.1"
 workmanager = "2.10.5"
 annotation = "1.9.1"
 lifecycle_viewmodel = "2.9.5"
+lifecycle_runtime = "2.9.4"
 
 # Compose
 compose_bom = "2025.09.00"
@@ -94,6 +95,7 @@ androidx_glance_material3 = { module = "androidx.glance:glance-material3", versi
 androidx_workmanager = { module = "androidx.work:work-runtime-ktx", version.ref = "workmanager" }
 androidx_lifecycle_viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle_viewmodel" }
 androidx_annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
+androidx_lifecycle_runtime = {module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle_runtime"}
 
 compose_bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose_bom" }
 compose_ui = { module = "androidx.compose.ui:ui" }
