🆙 Update Detekt to 2.0.0-alpha
Library updated to the latest alpha to work properly with the latest
changes in Compose rules. The ruleset was also updated to reflect this
changes.

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -1,7 +1,3 @@
-complexity:
-  TooManyFunctions:
-    thresholdInClasses: 20
-
 comments:
   excludes: [ '**/test/**','**/androidTest/**','**/android-test/**','**/*.Test.kt','**/*.Spec.kt','**/*.Spek.kt' ]
   CommentOverPrivateFunction:
@@ -10,6 +6,8 @@ comments:
     active: false
   UndocumentedPublicProperty:
     excludes: ['**/designsystem/**']
+  AbsentOrWrongFileLicense:
+    active: false
 
 style:
   DataClassShouldBeImmutable:
@@ -28,7 +26,8 @@ naming:
   TopLevelPropertyNaming:
     constantPattern: '[A-Z][A-Za-z0-9]*'
     excludes: [ '**/theme/**', '**/test/**','**/androidTest/**','**/android-test/**' ]
-  FunctionMaxLength:
+  FunctionNameMaxLength:
     excludes: [ '**/test/**','**/androidTest/**','**/android-test/**' ]
   FunctionNaming:
     ignoreAnnotated: [ 'Composable' ]
+    excludes: [ '**/test/**','**/androidTest/**','**/android-test/**' ]
