--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,8 +36,8 @@ lifecycle_runtime = "2.10.0"
 compose_bom = "2025.12.01"
 compose_activity = "1.12.2"
 compose_compiler = "1.9.3"
-compose_navigation = "2.9.1"
-compose_adaptive = "1.2.0"
+compose_navigation = "1.0.0-alpha06"
+compose_adaptive = "1.3.0-alpha01"
 
 # Koin
 koin = "4.1.1"
@@ -103,9 +103,8 @@ compose_bom = { group = "androidx.compose", name = "compose-bom", version.ref = 
 compose_ui = { module = "androidx.compose.ui:ui" }
 compose_icons = { module = "androidx.compose.material:material-icons-extended" }
 compose_material3 = { module = "androidx.compose.material3:material3" }
-compose_adaptive_navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "compose_adaptive" }
-
-compose_navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose_navigation" }
+compose_navigation_ui = { module = "org.jetbrains.androidx.navigation3:navigation3-ui", version.ref = "compose_navigation" }
+compose_navigation_adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation3", version.ref = "compose_adaptive" }
 
 # Dynamic Feature don't recognize BOM
 compose_activity = { module = "androidx.activity:activity-compose", version.ref = "compose_activity" }
