--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -148,6 +148,7 @@ aboutlibraries_ui = { module = "com.mikepenz:aboutlibraries-compose", version.re
 compose = ["compose.ui", "compose.icons", "compose.material3"]
 
 [plugins]
+android_kmp_plugin = { id ="com.android.kotlin.multiplatform.library", version.ref ="android_gradle_plugin" }
 kotlin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose_compiler" }
