🛠️ Refactor Android tests to use Robolectric
Migrated Android tests from `androidTest` and `androidUnitTest` source
sets to a unified `androidHostTest` set using Robolectric. This change
allows tests to run on the JVM, removing the need for an emulator and
speeding up execution.

The `PlatformAnimation` class, used for disabling animations in
instrumentation tests, has been removed. A new `AlkaaBaseTest` base
class was introduced to handle platform-specific test configurations,
such as initializing Robolectric and `WorkManager` for testing.

Dependencies for `robolectric` and `work-testing` were also added.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,6 +56,8 @@ test_junit = "4.13.2"
 test_uiautomator = "2.3.0"
 test_junit4_android = "1.10.0"
 test_manifest = "1.10.0"
+test_work = "2.11.0"
+test_robolectric = "4.16"
 
 # Quality
 ktlint = "1.8.0"
@@ -133,6 +135,9 @@ test_uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.r
 
 test-junit4-android = { module = "androidx.compose.ui:ui-test-junit4-android", version.ref = "test_junit4_android" }
 test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "test_manifest" }
+test-work = { module = "androidx.work:work-testing", version.ref = "test_work" }
+
+test-robolectric = { module = "org.robolectric:robolectric", version.ref = "test_robolectric" }
 
 # Quality
 ktlint = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint" }
